@@ -434,6 +434,9 @@ class Objects extends AbstractCallback
             // Check nesting level
             $this->pool->emergencyHandler->upOneNestingLevel();
             if ($this->pool->emergencyHandler->checkNesting()) {
+                // We will not be doing this one, but we need to get down with our
+                // nesting level again.
+                $this->pool->emergencyHandler->downOneNestingLevel();
                 return '';
             }
 
@@ -589,7 +592,7 @@ class Objects extends AbstractCallback
         }
 
         // Got some getters right here.
-        // We need to set al least one connector here to activate
+        // We need to set at least one connector here to activate
         // code generation, even if it is a space.
         return $this->pool->render->renderExpandableChild(
             $this->pool->createClass('Brainworxx\\Krexx\\Analyse\\Model')
